# android-support

./: Cargo.toml  Makefile  README.md  classes.dex
.helix/: languages.toml
example/: Cargo.toml  manifest.yaml
example/src/: lib.rs
java/: Activity.java
src/: lib.rs
